# LetMeFuckIt-Scanner

./: letmefuckit.py  pyproject.toml
