[tool.poetry]
name = "letmefuckit-scanner"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <48170652+alex-kondr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pygoogle = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
